# simple-House-Price-Predictor

./: .gitattributes  .gitignore  README.md  gui_app.py  model_predict.py  pyproject.toml
notebook/: model_training.ipynb
