[project]
name = "house-price-perdiction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pandas-stubs~=2.3.3",
    "pyinstaller>=6.17.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
